<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:background="@drawable/btn_border_radius_fill_gray"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_enter_a_keyword"
                android:imeOptions="actionSearch"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColorHint="#546E7A"
                android:textSize="12sp" />
            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:background="@color/colorGray"/>

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_search_gray"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/search" />
        </LinearLayout>
        <!-- The following ↓ are items scrolling views by Yuxiang-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
            <ImageView
                android:id="@+id/car"
                android:layout_width="150dp"
                android:layout_height="160dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="70dp"
                android:contentDescription="@string/car"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/car"
                android:onClick="car_detailActivity"/>

            <TextView
                android:id="@+id/car_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/car"
                app:layout_constraintTop_toTopOf="@+id/car"
                android:onClick="car_detailActivity"/>

            <ImageView
                android:id="@+id/stack"
                android:layout_width="150dp"
                android:layout_height="160dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/stack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car"
                app:srcCompat="@drawable/stack"
                android:onClick="stack_detailActivity"/>

            <TextView
                android:id="@+id/stack_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/stack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/stack"
                app:layout_constraintTop_toTopOf="@+id/stack"
                android:onClick="stack_detailActivity"/>

            <ImageView
                android:id="@+id/dinosaur"
                android:layout_width="150dp"
                android:layout_height="160dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/dinosaur"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stack"
                app:srcCompat="@drawable/dinosaur" />

            <TextView
                android:id="@+id/dinosaur_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/dinosaur"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dinosaur"
                app:layout_constraintTop_toTopOf="@+id/dinosaur" />

            <ImageView
                android:id="@+id/tablet"
                android:layout_width="150dp"
                android:layout_height="160dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/tablet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dinosaur"
                app:srcCompat="@drawable/tablet" />

            <TextView
                android:id="@+id/tablet_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/tablet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tablet"
                app:layout_constraintTop_toTopOf="@+id/tablet" />

            <ImageView
                android:id="@+id/fighter"
                android:layout_width="150sp"
                android:layout_height="160sp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/fighter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tablet"
                app:srcCompat="@drawable/fighter" />

            <TextView
                android:id="@+id/fighter_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/fighter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fighter"
                app:layout_constraintTop_toTopOf="@+id/fighter" />

            <ImageView
                android:id="@+id/bear"
                android:layout_width="150sp"
                android:layout_height="160sp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/bear"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fighter"
                app:srcCompat="@drawable/bear" />

            <TextView
                android:id="@+id/bear_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/bear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bear"
                app:layout_constraintTop_toTopOf="@+id/bear" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </TableLayout>
</ScrollView>